fix font size on mobile

--- a/css/style.sass
+++ b/css/style.sass
@@ -58,6 +58,11 @@ body, h1, h2, h3, h4, .h1, .h2, .h3, .h4
     :font
       :size 4em
       :weight lighter
+@media (max-width: 767px) //{}
+  .page-header
+    h1, .h1
+      :font
+        :size 2em
 
 h1,h2,h3,h4,h5,h6
   margin-top: 2em
